Assignment Solution for Module 2

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,26 +8,32 @@
 </head>
 <body>
     <h1>Our Menu</h1>
-    <section id="section1">
-        <h2 id="header-section1">Chicken</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
-            excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
-            obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
-        </p>
-    </section>
-    <section id="section2">
-        <h2 id="header-section2">Beef</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
-            excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
-            obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
-        </p>
-    </section>
-    <section id="section3">
-        <h2 id="header-section3">Sushi</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
-            excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
-            obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
-        </p>
-    </section>
+    <div class="col-4 col-6">
+        <section id="section1">
+            <h2 id="header-section1">Chicken</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
+                excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
+                obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
+            </p>
+        </section>
+    </div>
+    <div class="col-4 col-6">
+        <section id="section2">
+            <h2 id="header-section2">Beef</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
+                excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
+                obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
+            </p>
+        </section>
+    </div>
+    <div class="col-4 col-12">
+        <section id="section3">
+            <h2 id="header-section3">Sushi</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut soluta vel 
+                excepturi est sunt, facilis eos deserunt reiciendis esse doloremque optio 
+                obcaecati dolore nobis modi expedita nihil voluptates ea exercitationem?
+            </p>
+        </section>
+    </div>
 </body>
 </html>
