--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <div class="">
+          <div>
             <a id="nav-brand" class="navbar-brand" href="/index.html">Food , LLC</a>
           </div>
           <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
