--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -26,7 +26,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <div>
-            <a id="nav-brand" class="navbar-brand" href="/index.html">Food , LLC</a>
+            <a id="nav-brand" class="navbar-brand" href="index.html">Food , LLC</a>
           </div>
           <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
